# caichat

./: .gitignore  ADAPTIVE-ATTENTION.md  CMakeLists.txt  CPP-IMPLEMENTATION-GUIDE.md  Cargo.toml  HYPERGRAPH-AUDIT.md  IMPLEMENTATION-GUIDE.md  demo_hypergraph_audit.sh  example-ggml.scm  example-recursive-pseudocode.scm  example.scm  test-c-extension.scm  test-caichat.scm  test-ggml-minimal.scm  test-ggml.scm  test-issue-requirements.scm
.github/ISSUE_TEMPLATE/: packager_template.md
.github/workflows/: release.yaml
assets/: arena.html  playground.html
examples/: README.md  guix-package.scm  npm-package.json  pyproject.toml
examples/npm/: README.md  aichat-wrapper.js  download-binary.js  test.js
manifests/winget/: README.md  sigoden.aichat.installer.yaml  sigoden.aichat.locale.en-US.yaml  sigoden.aichat.yaml
opencog/: README.md  caichat.conf.in
opencog/caichat/: ChatCompletion.cc  ChatCompletion.h  LLMClient.cc  LLMClient.h  SchemeBindings.cc  SessionManager.cc  SessionManager.h
opencog/scm/caichat/: caichat.scm  config.scm  init.scm  rag.scm  repl.scm
scripts/: analyze-packaging.sh
src/: cli.rs  config_reinforcement.rs  hypergraph.rs  main.rs  test_hypergraph_audit.rs
src/client/: common.rs
src/config/: session.rs
src/rag/: mod.rs
